[workspace]
resolver = "2"
members = [
    "phoenix-sdk",
    "phoenix-sdk-core",
    "examples"
]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] }
solana-program = "1.14.5"
solana-account-decoder = "1.14.7"
anyhow = "1.0.52"
solana-sdk = "1.10.32"
borsh = "1.3.1"
rand = "0.8.5"
ellipsis-client = "0.2.1"
ellipsis-transaction-utils = "0.1.0"
phoenix-v1 = { git = "https://github.com/JakkuSakura/phoenix-v1", features = [ "no-entrypoint" ]}
tokio = { version = "1.23.0", features = ["full"] }
solana-client = "1.10.32"
clap = { version = "4.5.0", features = ["derive"] }
shellexpand = "3.1.0"
num-traits = "0.2"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26"
itertools = "0.12.1"
bytemuck = "1.11.0"
serde = "^1.0.63"
phoenix-seat-manager = { git = "https://github.com/JakkuSakura/phoenix-seat-manager-v1" }
yellowstone-grpc-proto = "=1.6.0+solana.1.16.1"
yellowstone-grpc-client = "=1.6.0+solana.1.16.1"

